kubernetes/apps/flux-system/weave-gitops/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ops.robotwizard.co.uk
    secretName: ops-cert
  rules:
  - host: ops.robotwizard.co.uk
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
            service:
              name: weave-gitops
              port:
                number: 9001
